--- a/orders-dashboard.html
+++ b/orders-dashboard.html
@@ -2,31 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fourth Gate Orders Dashboard</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script type="module">
     // Import Firebase SDK (v9 modular)
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
     import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-    // TODO: Replace with your Firebase project config
+    // Firebase Config
    const firebaseConfig = {
-
-  apiKey: "AIzaSyDcwybZJui1WKAujPclyPgBaj_bE7IK-tg",
-
-  authDomain: "fourth-gate-microgreens.firebaseapp.com",
-
-  projectId: "fourth-gate-microgreens",
-
-  storageBucket: "fourth-gate-microgreens.firebasestorage.app",
-
-  messagingSenderId: "601340343009",
-
-  appId: "1:601340343009:web:3ba10d82fca3252b3b3da0",
-
-  measurementId: "G-GM9VW1NRV9"
-
-};
+        apiKey: "AIzaSyDcwybZJui1WKAujPclyPgBaj_bE7IK-tg",
+        authDomain: "fourth-gate-microgreens.firebaseapp.com",
+        projectId: "fourth-gate-microgreens",
+        storageBucket: "fourth-gate-microgreens.firebasestorage.app",
+        messagingSenderId: "601340343009",
+        appId: "1:601340343009:web:3ba10d82fca3252b3b3da0",
+        measurementId: "G-GM9VW1NRV9"
+    };
 
     // Init
     const app = initializeApp(firebaseConfig);
@@ -37,48 +31,123 @@
     const loginForm = document.getElementById("login-form");
     const logoutBtn = document.getElementById("logout-btn");
     const ordersDiv = document.getElementById("orders");
+    const authSection = document.getElementById("auth-section");
+    const dashboardSection = document.getElementById("dashboard");
 
     // Login
-    loginForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const email = e.target.email.value;
-      const password = e.target.password.value;
-      try {
-        await signInWithEmailAndPassword(auth, email, password);
-      } catch (err) {
-        alert("Login failed: " + err.message);
-      }
-    });
+    if (loginForm) {
+        loginForm.addEventListener("submit", async (e) => {
+            e.preventDefault();
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            try {
+                await signInWithEmailAndPassword(auth, email, password);
+            } catch (err) {
+                alert("Login failed: " + err.message);
+            }
+        });
+    }
 
     // Logout
-    logoutBtn.addEventListener("click", () => signOut(auth));
+    if (logoutBtn) {
+        logoutBtn.addEventListener("click", () => signOut(auth));
+    }
 
     // Listen to auth state
     onAuthStateChanged(auth, (user) => {
       if (user) {
-        document.getElementById("auth-section").style.display = "none";
-        document.getElementById("dashboard").style.display = "block";
+        authSection.classList.add("hidden");
+        dashboardSection.classList.remove("hidden");
         loadOrders();
       } else {
-        document.getElementById("auth-section").style.display = "block";
-        document.getElementById("dashboard").style.display = "none";
+        authSection.classList.remove("hidden");
+        dashboardSection.classList.add("hidden");
       }
     });
+
+    // Helper to format timestamp
+    function formatDate(timestamp) {
+        if (!timestamp) return 'N/A';
+        // Handle Firestore Timestamp or standard Date object
+        const date = timestamp.toDate ? timestamp.toDate() : new Date(timestamp);
+        return date.toLocaleString();
+    }
+
+    // Helper to format custom contents
+    function formatContents(customContents, wheatgrassQty) {
+        let html = '<ul class="list-disc list-inside ml-2">';
+        if (customContents) {
+            for (const [crop, qty] of Object.entries(customContents)) {
+                html += `<li>${crop}: ${qty * 4}oz</li>`;
+            }
+        }
+        if (wheatgrassQty > 0) {
+             html += `<li>Wheatgrass: ${wheatgrassQty} tray(s)</li>`;
+        }
+        html += '</ul>';
+        return html;
+    }
 
     // Load orders in realtime
     function loadOrders() {
       const q = query(collection(db, "orders"), orderBy("createdAt", "desc"));
       onSnapshot(q, (snapshot) => {
         ordersDiv.innerHTML = "";
+        if (snapshot.empty) {
+            ordersDiv.innerHTML = '<p class="text-gray-500">No orders found.</p>';
+            return;
+        }
+
         snapshot.forEach((doc) => {
           const order = doc.data();
+          // Safely access nested address fields
+          const addr = order.deliveryAddress || {};
+
           ordersDiv.innerHTML += `
-            <div style="border:1px solid #ccc; padding:10px; margin:10px;">
-              <strong>Email:</strong> ${order.email}<br>
-              <strong>Amount:</strong> $${order.amount}<br>
-              <strong>Status:</strong> ${order.status}<br>
-              <strong>Address:</strong> ${order.address?.line1 || ""}, ${order.address?.city || ""}, ${order.address?.state || ""}, ${order.address?.postal_code || ""}, ${order.address?.country || ""}<br>
-              <small>Session: ${order.sessionId}</small>
+            <div class="bg-white border border-gray-200 rounded-xl p-6 mb-6 shadow-sm hover:shadow-md transition-shadow">
+              <div class="flex justify-between items-start mb-4">
+                  <div>
+                      <h3 class="text-lg font-bold text-green-800">${order.customerName || 'Customer'}</h3>
+                      <p class="text-sm text-gray-600">${order.customerEmail || 'No email'}</p>
+                  </div>
+                  <div class="text-right">
+                      <span class="inline-block px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm font-medium mb-1">
+                          ${order.paymentStatus || 'N/A'}
+                      </span>
+                       <p class="font-bold text-lg">$${order.amountTotal ? order.amountTotal.toFixed(2) : '0.00'}</p>
+                       <p class="text-xs text-gray-500">${formatDate(order.createdAt)}</p>
+                  </div>
+              </div>
+
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-6 border-t border-gray-100 pt-4">
+                  <div>
+                      <h4 class="font-semibold text-gray-700 mb-2">📦 Order Details</h4>
+                      <p><strong>Type:</strong> ${order.boxType || 'Standard'}</p>
+                      <div class="text-sm text-gray-700 mt-1">
+                        ${formatContents(order.customContents, order.wheatgrassQuantity)}
+                      </div>
+                       ${order.rotationFavorites ? `
+                        <div class="mt-3 bg-blue-50 p-3 rounded-lg text-sm">
+                            <strong>🔄 Rotation Preferences:</strong><br>
+                            ${order.rotationFavorites}
+                        </div>
+                       ` : ''}
+                  </div>
+                  <div>
+                      <h4 class="font-semibold text-gray-700 mb-2">🚚 Delivery Info</h4>
+                      <p><strong>Preferred Day:</strong> ${order.deliveryDay || 'Not specified'}</p>
+                      <address class="not-italic text-sm text-gray-600 mt-2 p-3 bg-gray-50 rounded-lg">
+                          <strong>${addr.recipient_name || order.customerName || ''}</strong><br>
+                          ${addr.line1 || ''} ${addr.line2 || ''}<br>
+                          ${addr.city || ''}, ${addr.state || ''} ${addr.postal_code || ''}<br>
+                          ${addr.country || ''}
+                      </address>
+                  </div>
+              </div>
+              <div class="mt-4 pt-4 border-t border-gray-100 text-xs text-gray-400 flex justify-between">
+                  <span>Order ID: ${doc.id}</span>
+                  <span>Stripe Session: ${order.stripeSessionId || 'N/A'}</span>
+              </div>
             </div>
           `;
         });
@@ -86,23 +155,39 @@
     }
   </script>
 </head>
-<body style="font-family: sans-serif; max-width: 700px; margin: auto; padding: 2rem;">
-  <h1>🌱 Fourth Gate Orders Dashboard</h1>
+<body class="bg-gray-100 font-sans min-h-screen p-6">
+  <div class="max-w-4xl mx-auto">
+      <div class="flex justify-between items-center mb-8">
+        <h1 class="text-3xl font-bold text-[#2D4026]">🌱 Fourth Gate Orders</h1>
+        <button id="logout-btn" class="hidden bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 px-4 rounded-lg transition">
+            Logout
+        </button>
+      </div>
 
-  <!-- Login -->
-  <div id="auth-section">
-    <form id="login-form">
-      <input type="email" name="email" placeholder="Email" required /><br><br>
-      <input type="password" name="password" placeholder="Password" required /><br><br>
-      <button type="submit">Login</button>
-    </form>
-  </div>
+      <!-- Login Section -->
+      <div id="auth-section" class="max-w-md mx-auto bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-xl font-semibold mb-4">Admin Login</h2>
+        <form id="login-form" class="space-y-4">
+          <div>
+              <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+              <input type="email" id="email" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:outline-none" />
+          </div>
+          <div>
+              <label class="block text-sm font-medium text-gray-700 mb-1">Password</label>
+              <input type="password" id="password" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:outline-none" />
+          </div>
+          <button type="submit" class="w-full bg-[#3B7235] hover:bg-[#2d5829] text-white font-bold py-3 px-4 rounded-lg transition">
+              Login
+          </button>
+        </form>
+      </div>
 
-  <!-- Dashboard -->
-  <div id="dashboard" style="display:none;">
-    <button id="logout-btn">Logout</button>
-    <h2>Orders</h2>
-    <div id="orders">Loading orders...</div>
+      <!-- Dashboard Section -->
+      <div id="dashboard" class="hidden">
+        <div id="orders">
+            <div class="text-center py-12 text-gray-500">Loading orders...</div>
+        </div>
+      </div>
   </div>
 </body>
 </html>
