--- a/orders-dashboard.html
+++ b/orders-dashboard.html
@@ -70,19 +70,31 @@
         if (!timestamp) return 'N/A';
         // Handle Firestore Timestamp or standard Date object
         const date = timestamp.toDate ? timestamp.toDate() : new Date(timestamp);
-        return date.toLocaleString();
+        return date.toLocaleString('en-US', { 
+            dateStyle: 'medium', 
+            timeStyle: 'short' 
+        });
     }
 
     // Helper to format custom contents
     function formatContents(customContents, wheatgrassQty) {
-        let html = '<ul class="list-disc list-inside ml-2">';
-        if (customContents) {
+        let html = '<ul class="list-disc list-inside ml-2 text-gray-800">';
+        let hasItems = false;
+        if (customContents && Object.keys(customContents).length > 0) {
             for (const [crop, qty] of Object.entries(customContents)) {
-                html += `<li>${crop}: ${qty * 4}oz</li>`;
+                html += `<li><span class="font-medium">${crop}:</span> ${qty * 4}oz</li>`;
+                hasItems = true;
             }
         }
-        if (wheatgrassQty > 0) {
-             html += `<li>Wheatgrass: ${wheatgrassQty} tray(s)</li>`;
+        // Ensure wheatgrassQty is treated as a number
+        const wgQtyNum = Number(wheatgrassQty) || 0;
+        if (wgQtyNum > 0) {
+             html += `<li><span class="font-medium">Wheatgrass (5x5 tray):</span> Qty ${wgQtyNum}</li>`;
+             hasItems = true;
+        }
+        
+        if (!hasItems) {
+            html += '<li class="text-gray-500 italic">No specific items listed</li>';
         }
         html += '</ul>';
         return html;
@@ -94,59 +106,113 @@
       onSnapshot(q, (snapshot) => {
         ordersDiv.innerHTML = "";
         if (snapshot.empty) {
-            ordersDiv.innerHTML = '<p class="text-gray-500">No orders found.</p>';
+            ordersDiv.innerHTML = '<div class="text-center py-12 bg-white rounded-xl shadow-sm"><p class="text-gray-500">No orders found yet.</p></div>';
             return;
         }
 
         snapshot.forEach((doc) => {
           const order = doc.data();
-          // Safely access nested address fields
           const addr = order.deliveryAddress || {};
+          const currency = (order.currency || 'usd').toUpperCase();
 
           ordersDiv.innerHTML += `
-            <div class="bg-white border border-gray-200 rounded-xl p-6 mb-6 shadow-sm hover:shadow-md transition-shadow">
-              <div class="flex justify-between items-start mb-4">
-                  <div>
-                      <h3 class="text-lg font-bold text-green-800">${order.customerName || 'Customer'}</h3>
-                      <p class="text-sm text-gray-600">${order.customerEmail || 'No email'}</p>
+            <div class="bg-white border border-gray-200 rounded-xl overflow-hidden mb-6 shadow-sm hover:shadow-md transition-all">
+              <!-- Header -->
+              <div class="bg-gray-50 px-6 py-4 flex flex-col md:flex-row justify-between items-start md:items-center border-b border-gray-100">
+                  <div class="mb-2 md:mb-0">
+                      <h3 class="text-lg font-bold text-[#2D4026] flex items-center gap-2">
+                          ${order.customerName || 'Unknown Customer'}
+                          <span class="text-xs font-normal text-gray-500 bg-gray-200 px-2 py-1 rounded-full">${order.boxType || 'N/A'} Box</span>
+                      </h3>
+                      <a href="mailto:${order.customerEmail}" class="text-sm text-green-600 hover:underline">${order.customerEmail || 'No email'}</a>
                   </div>
-                  <div class="text-right">
-                      <span class="inline-block px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm font-medium mb-1">
-                          ${order.paymentStatus || 'N/A'}
-                      </span>
-                       <p class="font-bold text-lg">$${order.amountTotal ? order.amountTotal.toFixed(2) : '0.00'}</p>
-                       <p class="text-xs text-gray-500">${formatDate(order.createdAt)}</p>
+                  <div class="text-left md:text-right">
+                       <div class="flex items-center gap-2 md:justify-end">
+                           <span class="font-bold text-xl text-[#2D4026]">$${order.amountTotal ? Number(order.amountTotal).toFixed(2) : '0.00'} <span class="text-xs text-gray-400">${currency}</span></span>
+                           <span class="px-3 py-1 ${order.paymentStatus === 'paid' ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'} rounded-full text-xs font-bold uppercase tracking-wider">
+                              ${order.paymentStatus || 'unknown'}
+                           </span>
+                       </div>
+                       <p class="text-xs text-gray-500 mt-1">Ordered: ${formatDate(order.createdAt)}</p>
                   </div>
               </div>
 
-              <div class="grid grid-cols-1 md:grid-cols-2 gap-6 border-t border-gray-100 pt-4">
-                  <div>
-                      <h4 class="font-semibold text-gray-700 mb-2">📦 Order Details</h4>
-                      <p><strong>Type:</strong> ${order.boxType || 'Standard'}</p>
-                      <div class="text-sm text-gray-700 mt-1">
+              <!-- Body -->
+              <div class="p-6 grid grid-cols-1 md:grid-cols-3 gap-6">
+                  <!-- Col 1: Order Contents -->
+                  <div class="md:col-span-1">
+                      <h4 class="font-bold text-gray-700 mb-3 flex items-center uppercase text-xs tracking-wider">
+                          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2" />
+                          </svg>
+                          Contents
+                      </h4>
+                      <div class="bg-green-50 p-4 rounded-lg border border-green-100">
                         ${formatContents(order.customContents, order.wheatgrassQuantity)}
                       </div>
                        ${order.rotationFavorites ? `
-                        <div class="mt-3 bg-blue-50 p-3 rounded-lg text-sm">
-                            <strong>🔄 Rotation Preferences:</strong><br>
-                            ${order.rotationFavorites}
+                        <div class="mt-3">
+                            <h5 class="text-xs font-bold text-blue-800 uppercase tracking-wider mb-1">🔄 Rotation Preferences</h5>
+                            <p class="text-sm bg-blue-50 text-blue-900 p-3 rounded-lg border border-blue-100 italic">
+                                "${order.rotationFavorites}"
+                            </p>
                         </div>
                        ` : ''}
                   </div>
-                  <div>
-                      <h4 class="font-semibold text-gray-700 mb-2">🚚 Delivery Info</h4>
-                      <p><strong>Preferred Day:</strong> ${order.deliveryDay || 'Not specified'}</p>
-                      <address class="not-italic text-sm text-gray-600 mt-2 p-3 bg-gray-50 rounded-lg">
-                          <strong>${addr.recipient_name || order.customerName || ''}</strong><br>
-                          ${addr.line1 || ''} ${addr.line2 || ''}<br>
-                          ${addr.city || ''}, ${addr.state || ''} ${addr.postal_code || ''}<br>
-                          ${addr.country || ''}
-                      </address>
+
+                  <!-- Col 2: Delivery Info -->
+                  <div class="md:col-span-1">
+                      <h4 class="font-bold text-gray-700 mb-3 flex items-center uppercase text-xs tracking-wider">
+                          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 00-1-1H9m9 9h1a1 1 0 001-1v-3a1 1 0 00-1-1H9a1 1 0 00-1 1v3a1 1 0 001 1h1m9-9h-1a1 1 0 00-1 1v3a1 1 0 01-1 1h-1a1 1 0 01-1-1V6a1 1 0 00-1-1H4a1 1 0 00-1 1v3" />
+                          </svg>
+                          Delivery
+                      </h4>
+                      <div class="bg-gray-50 p-4 rounded-lg border border-gray-100 h-full">
+                          <p class="mb-2">
+                              <span class="text-xs font-bold text-gray-500 uppercase">Preferred Day</span><br>
+                              <span class="font-medium text-gray-900">${order.deliveryDay || 'Not specified'}</span>
+                          </p>
+                          <div class="mt-4">
+                              <span class="text-xs font-bold text-gray-500 uppercase">Shipping Address</span>
+                              <address class="not-italic text-sm text-gray-700 mt-1">
+                                  <span class="font-semibold">${addr.recipient_name || order.customerName || ''}</span><br>
+                                  ${addr.line1 || ''}<br>
+                                  ${addr.line2 ? addr.line2 + '<br>' : ''}
+                                  ${addr.city || ''}, ${addr.state || ''} ${addr.postal_code || ''}<br>
+                                  ${addr.country || ''}
+                              </address>
+                          </div>
+                      </div>
                   </div>
-              </div>
-              <div class="mt-4 pt-4 border-t border-gray-100 text-xs text-gray-400 flex justify-between">
-                  <span>Order ID: ${doc.id}</span>
-                  <span>Stripe Session: ${order.stripeSessionId || 'N/A'}</span>
+
+                  <!-- Col 3: Stripe/Tech Details -->
+                  <div class="md:col-span-1">
+                       <h4 class="font-bold text-gray-700 mb-3 flex items-center uppercase text-xs tracking-wider">
+                          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                          </svg>
+                          System IDs
+                      </h4>
+                      <div class="bg-gray-50 p-4 rounded-lg border border-gray-100 text-xs font-mono text-gray-600 space-y-2 overflow-hidden">
+                          <div>
+                              <span class="font-bold text-gray-400 block">Firebase Order ID</span>
+                              <span class="break-all select-all">${doc.id}</span>
+                          </div>
+                          <div>
+                              <span class="font-bold text-gray-400 block">Stripe Session ID</span>
+                              <span class="break-all select-all">${order.stripeSessionId || 'N/A'}</span>
+                          </div>
+                          <div>
+                              <span class="font-bold text-gray-400 block">Stripe Customer ID</span>
+                              <span class="break-all select-all">${order.stripeCustomerId || 'N/A'}</span>
+                          </div>
+                           <div>
+                              <span class="font-bold text-gray-400 block">Stripe Subscription ID</span>
+                              <span class="break-all select-all">${order.subscriptionId || 'N/A'}</span>
+                          </div>
+                      </div>
+                  </div>
               </div>
             </div>
           `;
@@ -156,28 +222,33 @@
   </script>
 </head>
 <body class="bg-gray-100 font-sans min-h-screen p-6">
-  <div class="max-w-4xl mx-auto">
+  <div class="max-w-6xl mx-auto">
       <div class="flex justify-between items-center mb-8">
-        <h1 class="text-3xl font-bold text-[#2D4026]">🌱 Fourth Gate Orders</h1>
-        <button id="logout-btn" class="hidden bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 px-4 rounded-lg transition">
+        <h1 class="text-3xl font-bold text-[#2D4026] flex items-center gap-3">
+            🌱 Fourth Gate <span class="text-gray-500 font-light">Orders Dashboard</span>
+        </h1>
+        <button id="logout-btn" class="hidden bg-white hover:bg-gray-50 text-gray-700 font-medium py-2 px-6 rounded-lg transition shadow-sm border border-gray-200">
             Logout
         </button>
       </div>
 
       <!-- Login Section -->
-      <div id="auth-section" class="max-w-md mx-auto bg-white p-8 rounded-2xl shadow-lg">
-        <h2 class="text-xl font-semibold mb-4">Admin Login</h2>
-        <form id="login-form" class="space-y-4">
+      <div id="auth-section" class="max-w-md mx-auto bg-white p-10 rounded-2xl shadow-xl mt-20">
+        <div class="text-center mb-8">
+             <h2 class="text-2xl font-bold text-[#2D4026]">Admin Login</h2>
+             <p class="text-gray-500">Please sign in to view orders</p>
+        </div>
+        <form id="login-form" class="space-y-5">
           <div>
-              <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
-              <input type="email" id="email" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:outline-none" />
+              <label class="block text-sm font-bold text-gray-700 mb-2">Email</label>
+              <input type="email" id="email" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#3B7235] focus:border-[#3B7235] transition outline-none" placeholder="admin@fourthgate.com" />
           </div>
           <div>
-              <label class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-              <input type="password" id="password" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:outline-none" />
+              <label class="block text-sm font-bold text-gray-700 mb-2">Password</label>
+              <input type="password" id="password" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#3B7235] focus:border-[#3B7235] transition outline-none" placeholder="••••••••" />
           </div>
-          <button type="submit" class="w-full bg-[#3B7235] hover:bg-[#2d5829] text-white font-bold py-3 px-4 rounded-lg transition">
-              Login
+          <button type="submit" class="w-full bg-[#3B7235] hover:bg-[#2D5829] text-white font-bold py-4 px-4 rounded-xl transition duration-200 ease-in-out transform hover:scale-[1.02]">
+              Sign In
           </button>
         </form>
       </div>
@@ -185,7 +256,11 @@
       <!-- Dashboard Section -->
       <div id="dashboard" class="hidden">
         <div id="orders">
-            <div class="text-center py-12 text-gray-500">Loading orders...</div>
+            <!-- Loading state -->
+            <div class="flex flex-col items-center justify-center py-20">
+                <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-[#3B7235] mb-4"></div>
+                <p class="text-gray-500">Loading orders...</p>
+            </div>
         </div>
       </div>
   </div>
